tests/success/lets/Generalisation2.vix
main =
  let id x = x
  let unused = id True
  printInt (id 41)
