tests/type-error/cycle-detection/top-level/Generalisation.vix
main =
  -- This doesn't work without let-generalisation
  let id x = x
  let unused = id True
  printInt (id 41)
